# sdk-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  integration.yml  publish.yml
demo/: README.md  _shared.py  async_demo.py  sync_demo.py
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: authentication.mdx  configuration.mdx  output-handling.mdx  render-modes.mdx
docs/src/content/docs/getting-started/: install.mdx  quick-start.mdx
docs/src/content/docs/production/: cancellation.mdx  errors.mdx  observability.mdx  retries-and-idempotency.mdx
docs/src/content/docs/support/: changelog.mdx  license.mdx  migration.mdx
docs/src/preset/: README.md  index.js  languages.js  preset.js  sidebar.js  theme.js
docs/src/preset/remark/: canonical-slugs.js  enforce-page-shape.js  index.js  shared.js
examples/: documents_delete.py  documents_get.py  documents_preview.py  documents_thumbnails.py  poli_page_constructor.py  render_document.py  render_pdf.py  render_pdf_stream.py  render_preview.py  render_to_file.py
scripts/: release.sh
scripts/extract-api/: main.py
src/poli_page/: __init__.py  _async_client.py  _client.py  _constants.py  _documents.py  _errors.py  _render.py  _transport.py  error_codes.py  fs.py  types.py
tests/: test_smoke.py
tests/integration/: conftest.py  test_async.py  test_documents.py  test_preview.py  test_render.py
tests/unit/: test_async_client.py  test_async_documents.py  test_async_render.py  test_client.py  test_documents.py  test_errors.py  test_fs.py  test_render.py  test_transport.py
